# PyTorch_MNIST-OpenVINO_cpp

./: .gitignore  README.md
cpp/: CMakeLists.txt  classify.cpp
python/: 00train.sh  dataset.py  mainloop.py  network.py  test.py  train.py
tool/: convert_csv.py
